feat: Add GRAPH_API_URL to .env.example.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Instagram API Credentials
 INSTAGRAM_ACCESS_TOKEN=your_access_token_here
 INSTAGRAM_ACCOUNT_ID=your_account_id_here
+GRAPH_API_URL=https://graph.instagram.com/v24.0
 
 # Data Paths (optional, defaults provided)
 LIBRARIES_PATH=data/libraries.json
